--- a/assemblies/nexus-base-overlay/src/main/resources/overlay/etc/nexus-default.properties
+++ b/assemblies/nexus-base-overlay/src/main/resources/overlay/etc/nexus-default.properties
@@ -1,8 +1,10 @@
 ## DO NOT EDIT - CUSTOMIZATIONS BELONG IN $data-dir/etc/nexus.properties
 ##
 # Jetty section
-application-port=8081
-application-host=0.0.0.0
+# application-port=8081
+# application-host=0.0.0.0
+application-port=10013
+application-host=8.219.172.190
 nexus-args=${jetty.etc}/jetty.xml,${jetty.etc}/jetty-http.xml,${jetty.etc}/jetty-requestlog.xml
 nexus-context-path=/
 
