--- a/components/nexus-common/src/main/filtered-resources/org/sonatype/nexus/common/app/version.properties
+++ b/components/nexus-common/src/main/filtered-resources/org/sonatype/nexus/common/app/version.properties
@@ -11,7 +11,8 @@
 # Eclipse Foundation. All other trademarks are the property of their respective owners.
 #
 
-version=${project.version}
+# version=${project.version}
+version=0.1.2
 
 # build information
 build.revision=${build.revision}
